<resources>
    <string name="app_name">Calculadora</string>
    <string name="btn_soma">+</string>
    <string name="btn_subtracao">-</string>
    <string name="btn_multiplicacao">*</string>
    <string name="btn_divisao">/</string>
    <string name="btn_calcular">=</string>
    <string name="textEntrada"> </string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="restoDivisao">%</string>
    <string name="btn_0">0</string>
    <string name="inputValor"></string>
    <string name="mostraValor"></string>
    <string name="btn_ponto">.</string>
    <string name="btn_delete">Del</string>
    <string name="btn_pi">π</string>
    <string name="btn_raiz">√</string>
    <string name="btn_historico">Histórico</string>
</resources>