<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TelaCalculadora"
    tools:visibility="visible">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/row"
        android:layout_width="414dp"
        android:layout_height="344dp"
        app:columnCount="5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.955"
        app:rowCount="4"
        app:rowOrderPreserved="true">

        <Button
            android:id="@+id/btn_multiplicacao"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiplicacao"
            android:textSize="18sp"
            app:layout_column="4"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_4"
            app:layout_column="0"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_7"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_5"
            app:layout_column="1"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_6"
            app:layout_column="2"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_8"
            app:layout_column="1"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_9"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_divisao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_divisao"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="1" />

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_calcular"
            android:textSize="18sp"
            app:layout_column="2"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_subtracao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_subtracao"
            android:textSize="18sp"
            app:layout_column="3"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_restoDivisao"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/restoDivisao"
            android:textSize="18sp"
            app:layout_column="4"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_0"
            app:layout_column="1"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_1"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_2"
            app:layout_column="1"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_3"
            app:layout_column="2"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_ponto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_ponto"
            app:layout_column="0"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_soma"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_soma"
            android:textSize="18sp"
            app:layout_column="4"
            app:layout_row="2" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_delete"
            app:layout_column="3"
            app:layout_row="0" />

        <Button
            android:id="@+id/btn_pi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_pi"
            app:layout_column="3"
            app:layout_row="3" />

        <Button
            android:id="@+id/btn_raiz"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_raiz"
            app:layout_column="4"
            app:layout_row="3" />

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="1dp"
        android:layout_height="18dp"
        android:text="@string/mostrarValor"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputValor"
        app:layout_constraintVertical_bias="0.17" />

    <TextView
        android:id="@+id/inputValor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/textEntrada"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/row"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>